--- a/tasks/install_runner.yml
+++ b/tasks/install_runner.yml
@@ -86,7 +86,9 @@
   become: yes
   become_user: "{{ runner_user }}"
   no_log: "{{ hide_sensitive_logs | bool }}"
-  when: runner_name not in registered_runners.json.runners|map(attribute='name')|list and not runner_org
+  when:
+   - runner_name not in registered_runners.json.runners|map(attribute='name')|list 
+   - runner_type == "repo"
   tags:
     - install
 
@@ -98,7 +100,23 @@
   become: yes
   become_user: "{{ runner_user }}"
   no_log: "{{ hide_sensitive_logs | bool }}"
-  when: runner_name not in registered_runners.json.runners|map(attribute='name')|list and runner_org
+  when:
+    - runner_name not in registered_runners.json.runners|map(attribute='name')|list
+    - runner_type == "org"
+  tags:
+    - install
+
+- name: Register runner (if new installation) for enterprise
+  command: "{{ runner_dir }}/./config.sh --url {{ github_url }}/enterprises/{{ github_ent | default(github_account) }} \
+            --token {{ registration.json.token }} --name {{ runner_name }} --labels {{ runner_labels | join(',') }} --unattended"
+  args:
+    chdir: "{{ runner_dir }}"
+  become: yes
+  become_user: "{{ runner_user }}"
+  no_log: "{{ hide_sensitive_logs | bool }}"
+  when:
+    - runner_name not in registered_runners.json.runners|map(attribute='name')|list
+    - runner_type == "ent"
   tags:
     - install
 
@@ -110,7 +128,10 @@
   become: yes
   become_user: "{{ runner_user }}"
   no_log: "{{ hide_sensitive_logs | bool }}"
-  when: runner_name in registered_runners.json.runners|map(attribute='name')|list and reinstall_runner and not runner_org
+  when:
+    - runner_name in registered_runners.json.runners|map(attribute='name')|list
+    - reinstall_runner
+    - runner_type == "repo"
   tags:
     - install
 
@@ -122,7 +143,25 @@
   become: yes
   become_user: "{{ runner_user }}"
   no_log: "{{ hide_sensitive_logs | bool }}"
-  when: runner_name in registered_runners.json.runners|map(attribute='name')|list and reinstall_runner and runner_org
+  when:
+    - runner_name in registered_runners.json.runners|map(attribute='name')|list
+    - reinstall_runner
+    - runner_type == "org"
+  tags:
+    - install
+
+- name: Replace registered runner for enterprise
+  command: "{{ runner_dir }}/config.sh --url {{ github_url }}/enterprises/{{ github_ent | default(github_account) }} \
+            --token {{ registration.json.token }} --name {{ runner_name }} --labels {{ runner_labels | join(',') }} --unattended --replace"
+  args:
+    chdir: "{{ runner_dir }}"
+  become: yes
+  become_user: "{{ runner_user }}"
+  no_log: "{{ hide_sensitive_logs | bool }}"
+  when:
+    - runner_name in registered_runners.json.runners|map(attribute='name')|list
+    - reinstall_runner
+    - runner_type == "ent"
   tags:
     - install
 
