--- a/tasks/collect_info_ent.yml
+++ b/tasks/collect_info_ent.yml
@@ -2,7 +2,7 @@
 - block:
   - name: Get registration token (RUN ONCE)
     uri:
-      url: "{{ github_api_url }}/enterprises/{{ github_ent }}/actions/runners/registration-token"
+      url: "{{ github_api_url }}/enterprises/{{ github_enterprise }}/actions/runners/registration-token"
       headers:
         Authorization: "token {{ access_token }}"
         Accept: "application/vnd.github.v3+json"
@@ -17,7 +17,7 @@
 
   - name: Check currently registered runners (RUN ONCE)
     uri:
-      url: "{{ github_api_url }}/enterprises/{{ github_ent }}/actions/runners"
+      url: "{{ github_api_url }}/enterprises/{{ github_enterprise }}/actions/runners"
       headers:
         Authorization: "token {{ access_token }}"
         Accept: "application/vnd.github.v3+json"
@@ -39,7 +39,7 @@
 
   - name: Build service name
     set_fact:
-      runner_service: "actions.runner.{{ ([( github_ent | default(github_account))[:45], runner_name] | join('.'))[:57]  }}.service"
+      runner_service: "actions.runner.{{ ([( github_enterprise | default(github_account))[:45], runner_name] | join('.'))[:57]  }}.service"
     when: service_name is not defined
     tags:
       - install
