--- a/tasks/collect_info_ent.yml
+++ b/tasks/collect_info_ent.yml
@@ -39,7 +39,7 @@
 
   - name: Build service name
     set_fact:
-      runner_service: "actions.runner.{{ ([( github_enterprise | default(github_account))[:45], runner_name] | join('.'))[:57]  }}.service"
+      runner_service: "actions.runner.{{ ([( github_enterprise )[:45], runner_name] | join('.'))[:57]  }}.service"
     when: service_name is not defined
     tags:
       - install
