--- a/tasks/install_runner.yml
+++ b/tasks/install_runner.yml
@@ -108,7 +108,7 @@
 
 - name: Register runner (if new installation) for enterprise
   command: "{{ runner_dir }}/./config.sh --url {{ github_url }}/enterprises/{{ github_owner | default(github_account) }} \
-            --token {{ registration.json.token }} --name {{ runner_name }} --labels {{ runner_labels | join(',') }} --unattended"
+            --token {{ registration.json.token }} --name {{ runner_name }} {{ runner_group|quote if runner_group is defined else '' }} --labels {{ runner_labels | join(',') }} --unattended"
   args:
     chdir: "{{ runner_dir }}"
   become: yes
